Workflow manual dispatch trigger

--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -4,6 +4,11 @@ on:
     branches:
       - main
       - develop
+  workflow_dispatch:
+    inputs:
+      tag_version:
+        description: "Tag-Version to upload the image"
+        required: true
 
 jobs:
   build-push:
@@ -21,6 +26,9 @@ jobs:
       - name: Docker image tag version (on develop branch push) to file
         if: github.ref == 'refs/heads/develop'
         run: "echo dev > /tmp/docker_tag_version.txt"
+      - name: Docker image tag version (on workflow dispatch) to file
+        if: github.event.inputs.tag_version
+        run: "echo ${{ github.event.inputs.tag_version }} > /tmp/docker_tag_version.txt"
       - name: Read extracted image tag version from file
         id: get_docker_tag_version_from_file
         uses: juliangruber/read-file-action@v1
@@ -29,6 +37,9 @@ jobs:
       - name: Set image tag version to variable
         id: get_image_tag_version
         run: echo ::set-output name=VERSION::$(echo ${{ steps.get_docker_tag_version_from_file.outputs.content }})
+      - name: Validate image tag version
+        id: validate_image_tag_version
+        run: "test ${{ steps.get_image_tag_version.outputs.VERSION }} || exit 1"
 
       # Setup building dependencies
       - name: Install QEMU
