--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -10,9 +10,32 @@ on:
         required: true
 
 jobs:
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      # Setup
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+
+      # Build image
+      - name: Build test image
+        run: make build IMAGE_TAG=ssh-port-forward-server-test
+
+      # Run test script
+      - name: Test
+        run: bash tools/test.sh
+        env:
+          SSH_SERVER_IMAGE: "ssh-port-forward-server-test"
+          SSH_CLIENT_IMAGE: "davidlor/ssh-port-forward-client:latest"
+
   build-push:
     name: Build & Push
     runs-on: ubuntu-latest
+    needs:
+      - test
     # Only run on main/develop push, or workflow_dispatch
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || github.event.inputs.tag_version
 
